--- a/style/style.css
+++ b/style/style.css
@@ -146,6 +146,11 @@ body {
   height: 100vh;
   padding: 40px;
 }
+@media screen and (max-width: 1024px) {
+  body {
+    background-image: url("../assets/images/background-pattern-mobile.svg");
+  }
+}
 body .accordion {
   border-radius: 16px;
   padding: 40px;
